Installs remaining dependencies, creates README.md, adds dev scripts

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-`MONGO_URI`
-`PORT`
+`MONGO_URI`='MONGODB_URI=mongodb://127.0.0.1:27017/userDB '
+`PORT`='3001'
 `JWT_SECRET`
 `GITHUB_CLIENT_ID`
 `GITHUB_CLIENT_SECRET`
