--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
+    "morgan": "^1.10.1",
     "nodemon": "^3.1.11",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12"
