--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
-`MONGO_URI`='MONGODB_URI=mongodb://127.0.0.1:27017/userDB '
-`PORT`='3001'
-`JWT_SECRET`
-`GITHUB_CLIENT_ID`
-`GITHUB_CLIENT_SECRET`
-`GITHUB_CALLBACK_URL`
+MONGO_URI=MONGODB_URI=mongodb://127.0.0.1:27017/userDB 
+GITHUB_CLIENT_SECRET=your_real_github_client_secret
+GITHUB_CALLBACK_URL=http://localhost:3001/api/users/auth/github/callback
