--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
-MONGO_URI=MONGODB_URI=mongodb://127.0.0.1:27017/userDB 
+MONGO_URI=mongodb://127.0.0.1:27017/userDB
+
+GITHUB_CLIENT_ID=your_real_client_id_here
 GITHUB_CLIENT_SECRET=your_real_github_client_secret
 GITHUB_CALLBACK_URL=http://localhost:3001/api/users/auth/github/callback
+
+JWT_SECRET=somejwtsecret
+PORT=3001
